UPdated row hover to use CSS rather than mouseover with ng-if and fixed hovering not showing after angular upgrade

--- a/src/components/datatable.component.scss
+++ b/src/components/datatable.component.scss
@@ -266,3 +266,10 @@
     }
   }
 }
+
+.datatable-body-row-hover .datatable-row-hover.hover-enabled{
+  display : none;
+}
+.datatable-body-row-hover:hover .datatable-row-hover.hover-enabled{
+  display : block;
+}
